// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressChecker should render correctly 1`] = `
<View
  style={
    [
      {
        "height": "100%",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "paddingLeft": 32,
        "paddingRight": 32,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 6,
          "paddingBottom": 4,
          "paddingTop": 4,
        },
        undefined,
        {
          "backgroundColor": "#FFF9F6",
        },
      ]
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
            "justifyContent": "flex-start",
            "width": "100%",
          }
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "fontFamily": "Baloo2-Bold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 26,
                },
                {
                  "fontFamily": "Baloo2-Bold",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                  "lineHeight": 32,
                },
                {
                  "color": "#2B1911",
                },
                {
                  "flexShrink": 1,
                },
              ],
              false,
            ]
          }
        >
          address checker
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "flex-end",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexGrow": 1,
        "gap": 64,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#099DE2",
          "borderRadius": 8,
          "borderWidth": 2,
          "gap": 10,
          "maxWidth": 230,
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#FFFCFA",
            "left": -12,
            "paddingBottom": 2,
            "paddingTop": 2,
            "position": "absolute",
            "top": 8,
          }
        }
      >
        <test-file-stub
          fill="#037DB5"
          style={
            [
              {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            undefined,
            false,
          ]
        }
      >
        you can use this to verify if an address belongs to your Peach wallet
      </Text>
    </View>
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "gap": 4,
              "justifyContent": "space-between",
              "paddingLeft": 12,
              "paddingRight": 12,
              "width": "100%",
            },
            {
              "borderRadius": 12,
              "borderWidth": 1,
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#FFFCFA",
            },
            {
              "borderColor": "#2B1911",
            },
            false,
            false,
            {
              "marginBottom": 1,
              "marginTop": 1,
            },
            undefined,
          ]
        }
      >
        <TextInput
          allowFontScaling={false}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={false}
          editable={true}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          placeholder="bc1q ..."
          placeholderTextColor="#EAE3DF"
          removeClippedSubviews={false}
          style={
            [
              {
                "flexShrink": 1,
                "fontFamily": "Baloo2-Regular",
                "fontSize": 18,
                "height": 40,
                "letterSpacing": 0.18,
                "lineHeight": 29.25,
                "paddingBottom": 0,
                "paddingTop": 0,
                "width": "100%",
              },
              {
                "color": "#BAADA7",
              },
              false,
              {
                "borderColor": "transparent",
                "borderWidth": 1,
              },
              false,
              false,
            ]
          }
          textAlignVertical="center"
          value=""
        />
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "row",
              "gap": 16,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <test-file-stub
              fill="#2B1911"
              style={
                [
                  {
                    "height": 24,
                    "width": 24,
                  },
                  {
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <test-file-stub
              fill="#2B1911"
              style={
                [
                  {
                    "height": 24,
                    "width": 24,
                  },
                  {
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "fontFamily": "Baloo2-Medium",
                "fontSize": 14,
                "letterSpacing": 0.14,
                "lineHeight": 20,
                "marginLeft": 12,
                "marginTop": 4,
              },
              {
                "color": "#DF321F",
              },
            ],
            false,
          ]
        }
      >
         
      </Text>
    </View>
    <View>
      <View
        style={
          {
            "height": 24,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`AddressChecker should render correctly when address belongs to wallet 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -234,11 +234,11 @@
                  "paddingBottom": 0,
                  "paddingTop": 0,
                  "width": "100%",
                },
                Object {
-                 "color": "#BAADA7",
+                 "color": "#2B1911",
                },
                false,
                Object {
                  "borderColor": "transparent",
                  "borderWidth": 1,
@@ -246,11 +246,11 @@
                false,
                false,
              ]
            }
            textAlignVertical="center"
-           value=""
+           value="bcrt1qm5 ... jhfgd0"
          />
          <View
            style={
              Object {
                "display": "flex",
@@ -386,14 +386,61 @@
           
        </Text>
      </View>
      <View>
        <View
+         style={
+           Array [
+             Object {
+               "alignItems": "center",
+               "alignSelf": "stretch",
+               "flexDirection": "row",
+               "gap": 4,
+               "justifyContent": "center",
+             },
+             undefined,
+           ]
+         }
+       >
+         <Text
+           allowFontScaling={false}
            style={
+             Array [
                Object {
-             "height": 24,
+                 "color": "#2B1911",
+                 "fontFamily": "Baloo2-Regular",
+                 "fontSize": 16,
+                 "letterSpacing": 0.16,
+                 "lineHeight": 24,
+               },
+               Array [
+                 Object {
+                   "fontFamily": "Baloo2-SemiBold",
+                   "fontSize": 14,
+                   "letterSpacing": 0.5,
+                   "lineHeight": 24,
+                   "textTransform": "uppercase",
+                 },
+                 undefined,
+               ],
+               false,
+             ]
            }
+         >
+           belongs to peach wallet
+         </Text>
+         <test-file-stub
+           fill="#05A85A"
+           style={
+             Array [
+               Object {
+                 "height": 20,
+                 "width": 20,
+               },
+               undefined,
+             ]
            }
          />
+       </View>
      </View>
    </View>
  </View>"
`;

exports[`AddressChecker should render correctly when address does not belong to wallet 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -234,11 +234,11 @@
                  "paddingBottom": 0,
                  "paddingTop": 0,
                  "width": "100%",
                },
                Object {
-                 "color": "#BAADA7",
+                 "color": "#2B1911",
                },
                false,
                Object {
                  "borderColor": "transparent",
                  "borderWidth": 1,
@@ -246,11 +246,11 @@
                false,
                false,
              ]
            }
            textAlignVertical="center"
-           value=""
+           value="bcrt1qm5 ... jhfgd0"
          />
          <View
            style={
              Object {
                "display": "flex",
@@ -386,14 +386,61 @@
           
        </Text>
      </View>
      <View>
        <View
+         style={
+           Array [
+             Object {
+               "alignItems": "center",
+               "alignSelf": "stretch",
+               "flexDirection": "row",
+               "gap": 4,
+               "justifyContent": "center",
+             },
+             undefined,
+           ]
+         }
+       >
+         <Text
+           allowFontScaling={false}
            style={
+             Array [
                Object {
-             "height": 24,
+                 "color": "#2B1911",
+                 "fontFamily": "Baloo2-Regular",
+                 "fontSize": 16,
+                 "letterSpacing": 0.16,
+                 "lineHeight": 24,
+               },
+               Array [
+                 Object {
+                   "fontFamily": "Baloo2-SemiBold",
+                   "fontSize": 14,
+                   "letterSpacing": 0.5,
+                   "lineHeight": 24,
+                   "textTransform": "uppercase",
+                 },
+                 undefined,
+               ],
+               false,
+             ]
            }
+         >
+           doesn’t belong to peach wallet
+         </Text>
+         <test-file-stub
+           fill="#DF321F"
+           style={
+             Array [
+               Object {
+                 "height": 20,
+                 "width": 20,
+               },
+               undefined,
+             ]
            }
          />
+       </View>
      </View>
    </View>
  </View>"
`;

exports[`AddressChecker should render correctly when address is invalid 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -195,15 +195,18 @@
                "backgroundColor": "#FFFCFA",
              },
              Object {
                "borderColor": "#2B1911",
              },
-             false,
-             false,
+             Object {
+               "backgroundColor": "#FFFCFA",
+             },
+             Object {
+               "borderColor": "#DF321F",
+             },
              Object {
-               "marginBottom": 1,
-               "marginTop": 1,
+               "borderWidth": 2,
              },
              undefined,
            ]
          }
        >
@@ -234,23 +237,22 @@
                  "paddingBottom": 0,
                  "paddingTop": 0,
                  "width": "100%",
                },
                Object {
-                 "color": "#BAADA7",
+                 "color": "#2B1911",
                },
-               false,
                Object {
-                 "borderColor": "transparent",
-                 "borderWidth": 1,
+                 "color": "#2B1911",
                },
+               false,
                false,
                false,
              ]
            }
            textAlignVertical="center"
-           value=""
+           value="invalidAddress"
          />
          <View
            style={
              Object {
                "display": "flex",
@@ -381,11 +383,11 @@
              ],
              false,
            ]
          }
        >
-          
+         bitcoin address is invalid
        </Text>
      </View>
      <View>
        <View
          style={"
`;
